尝试增加双语按钮

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -13,6 +13,11 @@ layout: compress
 
   <body>
 
+    <!-- 语言切换按钮 -->
+    <button id="langToggle" class="lang-btn">
+      {{ site.data.lang[site.lang].language_btn }}
+    </button>
+
     {% include browser-upgrade.html %}
     {% include masthead.html %}
 
@@ -26,6 +31,15 @@ layout: compress
     </div>
 
     {% include scripts.html %}
+
+    <script>
+      // 注入语言数据到全局变量
+      window.__LANG_DATA__ = {
+        en: {{ site.data.lang.en | jsonify }},
+        zh: {{ site.data.lang.zh | jsonify }}
+      };
+    </script>
+    <script src="{{ '/assets/js/lang-switcher.js' | relative_url }}"></script>
 
   </body>
 </html>
