--- a/_includes/seo.html
+++ b/_includes/seo.html
@@ -19,6 +19,10 @@
 {% endif %}
 
 <title>{{ seo_title | default: site.title }}{% if paginator %}{% unless paginator.page == 1 %} {{ site.title_separator }} {{ site.data.ui-text[site.locale].page | default: "Page" }} {{ paginator.page }}{% endunless %}{% endif %}</title>
+<!-- <title data-i18n="{{ page.i18n_key }}">
+  {{ site.data.lang[page.lang][page.i18n_key | default: site.title] }}
+  {% if paginator %}{% unless paginator.page == 1 %} {{ site.title_separator }} {{ site.data.ui-text[site.locale].page | default: "Page" }} {{ paginator.page }}{% endunless %}{% endif %}
+</title> -->
 
 {% assign seo_description = page.description | default: page.excerpt | default: site.description %}
 {% if seo_description %}
