尝试切换导航栏

--- a/_includes/masthead.html
+++ b/_includes/masthead.html
@@ -13,7 +13,12 @@
             {% else %}
               {% assign domain = base_path %}
             {% endif %}
-            <li class="masthead__menu-item"><a href="{{ domain }}{{ link.url }}">{{ link.title }}</a></li>
+            <div class="lang-zh">
+              <li class="masthead__menu-item"><a href="{{ domain }}{{ link.url }}">{{ link.title }}</a></li>
+            </div>
+            <div class="lang-en" style="display:none;">
+              <li class="masthead__menu-item"><a href="{{ domain }}{{ link.url }}">{{ link.entitle }}</a></li>
+            </div>
           {% endfor %}
           <li id="theme-toggle" class="masthead__menu-item persist tail">
             <a><i id="theme-icon" class="fa-solid fa-sun" aria-hidden="true" title="toggle theme"></i></a>
