--- a/_includes/masthead.html
+++ b/_includes/masthead.html
@@ -28,7 +28,7 @@
             <li class="masthead__menu-item">
               <a href="{{ domain }}{{ link.url }}">
                 <span class="lang-zh">{{ link.title }}</span>
-                <span class="lang-en">{{ link.entitle }}</span>
+                <span class="lang-en" style="display:none;">{{ link.entitle }}</span>
               </a>
             </li>
           {% endfor %}
