--- a/_includes/author-profile.html
+++ b/_includes/author-profile.html
@@ -25,7 +25,15 @@
     <ul class="author__urls social-icons">
       <!-- Font Awesome icons / Biographic information  -->
       {% if author.location %}
-        <li class="author__desktop"><i class="fa-solid fa-location-dot icon-pad-right" aria-hidden="true"></i>{{ author.location }}</li>
+        <!-- 原方案
+        <li class="author__desktop"><i class="fa-solid fa-location-dot icon-pad-right" aria-hidden="true"></i>{{ author.location }}</li> -->
+
+        <!-- 修改方案 -->
+        <li class="author__desktop">
+          <i class="fa-solid fa-location-dot icon-pad-right" aria-hidden="true"></i>
+            <span class="lang-zh">{{ author.location }}</span>
+            <span class="lang-en" style="display:none;">{{ author.location_en }}</span>
+        </li>
       {% endif %}
       {% if author.employer %}
         <li class="author__desktop"><i class="fas fa-fw fa-building-columns icon-pad-right" aria-hidden="true"></i>{{ author.employer }}</li>
