修改作者字体

--- a/_includes/author-profile.html
+++ b/_includes/author-profile.html
@@ -32,10 +32,10 @@
 
         <!-- 修改方案 -->
         <li class="author__desktop">
-          <i class="fa-solid fa-location-dot icon-pad-right" aria-hidden="true">
+          <i class="fa-solid fa-location-dot icon-pad-right" aria-hidden="true"></i>
             <span class="lang-zh">{{ author.location }}</span>
             <span class="lang-en" style="display:none;">{{ author.location_en }}</span>
-          </i>
+          
         </li>
       {% endif %}
       {% if author.employer %}
@@ -44,10 +44,10 @@
 
         <!-- 修改方案 -->
         <li class="author__desktop">
-          <i class="fas fa-fw fa-building-columns icon-pad-right" aria-hidden="true">
+          <i class="fas fa-fw fa-building-columns icon-pad-right" aria-hidden="true"></i>
             <span class="lang-zh">{{ author.employer }}</span>
             <span class="lang-en" style="display:none;">{{ author.employer_en }}</span>
-          </i>
+          
         </li>
       {% endif %}
       {% if author.uri %}
