Revert "更改按钮文字"
This reverts commit be6028f8c592ee4ea798dbc92d16e4e5153aa6c9.

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -10,7 +10,7 @@ layout: compress
     {% include head.html %}
     {% include head/custom.html %}
     <!-- 语言切换按钮 -->
-    <button id="language-toggle" class="language-toggle">English</button>
+    <button id="language-toggle" class="language-toggle">EN</button>
   </head>
 
   <body>
@@ -19,6 +19,8 @@ layout: compress
     {% include masthead.html %}
 
     {{ content }}
+
+    {% include scripts.html %}
 
   </body>
 </html>
